crossplane-demo/eks/networking/07-route-table-public.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: sistema-gaturro-route-public
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    gatewayIdRef:
      name: sistema-gaturro-internet-gw
    region: us-west-1
    routeTableIdRef:
      name: sistema-gaturro-route-table-public
    tags:
      Name: sistema-gaturro-route-public
  providerConfigRef:
    name: aws
