crossplane-demo/eks/networking/08-route-table-private-b.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: sistema-gaturro-route-private-b
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: sistema-gaturro-nat-gw-b
    region: us-west-1
    routeTableIdRef:
      name: sistema-gaturro-route-table-private-b
    tags:
      Name: sistema-gaturro-route-private-b
  providerConfigRef:
    name: aws
