crossplane-demo/eks/networking/09-route-table-private-c.yaml
apiVersion: ec2.aws.upbound.io/v1beta1
kind: Route
metadata:
  name: sistema-gaturro-route-private
spec:
  forProvider:
    destinationCidrBlock: 0.0.0.0/0
    natGatewayIdRef:
      name: sistema-gaturro-nat-gw-c
    region: us-west-1
    routeTableIdRef:
      name: sistema-gaturro-route-table-private-c
  providerConfigRef:
    name: aws
